
cmake_minimum_required (VERSION 3.22.1)

project(opencore-amr, LANGUAGES C CXX)

set(opencore-amr)

list(APPEND opencore-amr_SOURCES 
    amrnb/common/add.cpp
    amrnb/common/az_lsp.cpp
    amrnb/common/bitno_tab.cpp
    amrnb/common/bitreorder_tab.cpp
    amrnb/common/bits2prm.cpp
    amrnb/common/c2_9pf_tab.cpp
    amrnb/common/copy.cpp
    amrnb/common/div_32_common.cpp
    amrnb/common/div_s.cpp
    amrnb/common/extract_h.cpp
    amrnb/common/extract_l.cpp
    amrnb/common/gains_tbl.cpp
    amrnb/common/gc_pred.cpp
    amrnb/common/get_const_tbls.cpp
    amrnb/common/gmed_n.cpp
    amrnb/common/gray_tbl.cpp
    amrnb/common/grid_tbl.cpp
    amrnb/common/int_lpc.cpp
    amrnb/common/inv_sqrt.cpp
    amrnb/common/inv_sqrt_tbl.cpp
    amrnb/common/l_abs_common.cpp
    amrnb/common/l_deposit_h.cpp
    amrnb/common/l_deposit_l.cpp
    amrnb/common/l_shr_r.cpp
    amrnb/common/log2.cpp
    amrnb/common/log2_norm.cpp
    amrnb/common/log2_tbl.cpp
    amrnb/common/lsfwt.cpp
    amrnb/common/lsp.cpp
    amrnb/common/lsp_az.cpp
    amrnb/common/lsp_lsf.cpp
    amrnb/common/lsp_lsf_tbl.cpp
    amrnb/common/lsp_tab.cpp
    amrnb/common/mult_r.cpp
    amrnb/common/negate.cpp
    amrnb/common/norm_l.cpp
    amrnb/common/norm_s.cpp
    amrnb/common/overflow_tbl.cpp
    amrnb/common/ph_disp_tab.cpp
    amrnb/common/pow2.cpp
    amrnb/common/pow2_tbl.cpp
    amrnb/common/pred_lt.cpp
    amrnb/common/q_plsf.cpp
    amrnb/common/q_plsf_3.cpp
    amrnb/common/q_plsf_3_tbl.cpp
    amrnb/common/q_plsf_5.cpp
    amrnb/common/q_plsf_5_tbl.cpp
    amrnb/common/qua_gain_tbl.cpp
    amrnb/common/reorder.cpp
    amrnb/common/residu.cpp
    amrnb/common/round.cpp
    amrnb/common/set_zero.cpp
    amrnb/common/shr.cpp
    amrnb/common/shr_r.cpp
    amrnb/common/sqrt_l.cpp
    amrnb/common/sqrt_l_tbl.cpp
    amrnb/common/sub.cpp
    amrnb/common/syn_filt.cpp
    amrnb/common/weight_a.cpp
    amrnb/common/window_tab.cpp
    amrnb/dec/a_refl.cpp
    amrnb/dec/agc.cpp
    amrnb/dec/amrdecode.cpp
    amrnb/dec/b_cn_cod.cpp
    amrnb/dec/bgnscd.cpp
    amrnb/dec/c_g_aver.cpp
    amrnb/dec/d1035pf.cpp
    amrnb/dec/d2_11pf.cpp
    amrnb/dec/d2_9pf.cpp
    amrnb/dec/d3_14pf.cpp
    amrnb/dec/d4_17pf.cpp
    amrnb/dec/d8_31pf.cpp
    amrnb/dec/d_gain_c.cpp
    amrnb/dec/d_gain_p.cpp
    amrnb/dec/d_plsf.cpp
    amrnb/dec/d_plsf_3.cpp
    amrnb/dec/d_plsf_5.cpp
    amrnb/dec/dec_amr.cpp
    amrnb/dec/dec_gain.cpp
    amrnb/dec/dec_input_format_tab.cpp
    amrnb/dec/dec_lag3.cpp
    amrnb/dec/dec_lag6.cpp
    amrnb/dec/decoder_gsm_amr.cpp
    amrnb/dec/dtx_dec.cpp
    amrnb/dec/ec_gains.cpp
    amrnb/dec/ex_ctrl.cpp
    amrnb/dec/if2_to_ets.cpp
    amrnb/dec/int_lsf.cpp
    amrnb/dec/lsp_avg.cpp
    amrnb/dec/ph_disp.cpp
    amrnb/dec/post_pro.cpp
    amrnb/dec/preemph.cpp
    amrnb/dec/pstfilt.cpp
    amrnb/dec/pvgsmamrdecoder.cpp
    amrnb/dec/qgain475_tab.cpp
    amrnb/dec/sp_dec.cpp
    amrnb/dec/wmf_to_ets.cpp
    amrnb/enc/amrencode.cpp
    amrnb/enc/autocorr.cpp
    amrnb/enc/c1035pf.cpp
    amrnb/enc/c2_11pf.cpp
    amrnb/enc/c2_9pf.cpp
    amrnb/enc/c3_14pf.cpp
    amrnb/enc/c4_17pf.cpp
    amrnb/enc/c8_31pf.cpp
    amrnb/enc/calc_cor.cpp
    amrnb/enc/calc_en.cpp
    amrnb/enc/cbsearch.cpp
    amrnb/enc/cl_ltp.cpp
    amrnb/enc/cod_amr.cpp
    amrnb/enc/convolve.cpp
    amrnb/enc/cor_h.cpp
    amrnb/enc/cor_h_x.cpp
    amrnb/enc/cor_h_x2.cpp
    amrnb/enc/corrwght_tab.cpp
    amrnb/enc/div_32.cpp
    amrnb/enc/dtx_enc.cpp
    amrnb/enc/enc_lag3.cpp
    amrnb/enc/enc_lag6.cpp
    amrnb/enc/enc_output_format_tab.cpp
    amrnb/enc/ets_to_if2.cpp
    amrnb/enc/ets_to_wmf.cpp
    amrnb/enc/g_adapt.cpp
    amrnb/enc/g_code.cpp
    amrnb/enc/g_pitch.cpp
    amrnb/enc/gain_q.cpp
    amrnb/enc/gsmamr_encoder_wrapper.cpp
    amrnb/enc/hp_max.cpp
    amrnb/enc/inter_36.cpp
    amrnb/enc/inter_36_tab.cpp
    amrnb/enc/l_abs.cpp
    amrnb/enc/l_comp.cpp
    amrnb/enc/l_extract.cpp
    amrnb/enc/l_negate.cpp
    amrnb/enc/lag_wind.cpp
    amrnb/enc/lag_wind_tab.cpp
    amrnb/enc/levinson.cpp
    amrnb/enc/lflg_upd.cpp
    amrnb/enc/lpc.cpp
    amrnb/enc/ol_ltp.cpp
    amrnb/enc/p_ol_wgh.cpp
    amrnb/enc/pitch_fr.cpp
    amrnb/enc/pitch_ol.cpp
    amrnb/enc/pre_big.cpp
    amrnb/enc/pre_proc.cpp
    amrnb/enc/prm2bits.cpp
    amrnb/enc/q_gain_c.cpp
    amrnb/enc/q_gain_p.cpp
    amrnb/enc/qgain475.cpp
    amrnb/enc/qgain795.cpp
    amrnb/enc/qua_gain.cpp
    amrnb/enc/s10_8pf.cpp
    amrnb/enc/set_sign.cpp
    amrnb/enc/sid_sync.cpp
    amrnb/enc/sp_enc.cpp
    amrnb/enc/spreproc.cpp
    amrnb/enc/spstproc.cpp
    amrnb/enc/ton_stab.cpp
    amrnb/enc/vad1.cpp
    amrnb/wrapper_amrnb.cpp
    amrwb/wrapper_amrwb.cpp
    src/agc2_amr_wb.cpp
    src/band_pass_6k_7k.cpp
    src/dec_acelp_2p_in_64.cpp
    src/dec_acelp_4p_in_64.cpp
    src/dec_alg_codebook.cpp
    src/dec_gain2_amr_wb.cpp
    src/deemphasis_32.cpp
    src/dtx_decoder_amr_wb.cpp
    src/get_amr_wb_bits.cpp
    src/highpass_400hz_at_12k8.cpp
    src/highpass_50hz_at_12k8.cpp
    src/homing_amr_wb_dec.cpp
    src/interpolate_isp.cpp
    src/isf_extrapolation.cpp
    src/isp_az.cpp
    src/isp_isf.cpp
    src/lagconceal.cpp
    src/low_pass_filt_7k.cpp
    src/median5.cpp
    src/mime_io.cpp
    src/noise_gen_amrwb.cpp
    src/normalize_amr_wb.cpp
    src/oversamp_12k8_to_16k.cpp
    src/phase_dispersion.cpp
    src/pit_shrp.cpp
    src/pred_lt4.cpp
    src/preemph_amrwb_dec.cpp
    src/pvamrwb_math_op.cpp
    src/pvamrwbdecoder.cpp
    src/q_gain2_tab.cpp
    src/qisf_ns.cpp
    src/qisf_ns_tab.cpp
    src/qpisf_2s.cpp
    src/qpisf_2s_tab.cpp
    src/scale_signal.cpp
    src/synthesis_amr_wb.cpp
    src/voice_factor.cpp
    src/wb_syn_filt.cpp
    src/weight_amrwb_lpc.cpp
)

add_library(opencore-amr STATIC ${opencore-amr_SOURCES})

nlc_target_add_supported_warning_options(opencore-amr CXX
    -Wno-delete-incomplete
)

target_include_directories(opencore-amr
  PRIVATE
    amrnb/dec
    amrnb/enc
    amrnb/common
    oscl
    amrwb
    src
    include
)


